# DSD_theGreeter

./: .gitignore  .gitmodules  Dockerfile  README.md  build_dev_container.bash  compose.yaml  entrypoint.sh  imu_response.json  run_dev_container.bash  theGreeter.btproj
.github/ISSUE_TEMPLATE/: template.md
home_assistant/: HA_ros_api.py  home_assistant_cli.py  homeassistant_api.py
ros_ws/: imu_log.txt
ros_ws/maps/testing/: my_map.pgm  my_map.yaml
ros_ws/src/apriltag_merge/: package.xml  setup.cfg  setup.py
ros_ws/src/apriltag_merge/apriltag_merge/: apriltag_merge_node.py
ros_ws/src/greeter_bringup/: CMakeLists.txt  package.xml
ros_ws/src/greeter_bringup/config/: apriltag_config.yaml  camera_info.yaml  robot_localization_config.yaml
ros_ws/src/greeter_bringup/launch/: camera_pipeline.launch.py  mapping.launch.py  pi.launch.py  robot_localization.launch.py  sim.launch.py  sphero_rvr_bringup.launch.py  teleop_pipeline.launch.py
ros_ws/src/greeter_description/: CMakeLists.txt  package.xml
ros_ws/src/greeter_description/launch/: robot_description.launch.py
ros_ws/src/greeter_description/urdf/: robot.urdf
ros_ws/src/greeter_msgs/: CMakeLists.txt  package.xml
ros_ws/src/greeter_msgs/msg/: EncoderTicks.msg
ros_ws/src/home_assistant/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/home_assistant/home_assistant/: copyHA.py  home_assistant_node.py
ros_ws/src/homeassitant/: package.xml  setup.cfg  setup.py
ros_ws/src/homeassitant/homeassitant/: homeassitant_node.py
ros_ws/src/odom_publisher/: CMakeLists.txt  EncoderTicks.msg  package.xml
ros_ws/src/odom_publisher/src/: odom_publisher_node.cpp
ros_ws/src/path_recorder/: CMakeLists.txt  package.xml
ros_ws/src/path_recorder/src/: path_recorder_node.cpp
ros_ws/src/sphero_rvr/: package.xml  setup.cfg  setup.py
ros_ws/src/sphero_rvr/sphero_rvr/: sphero_rvr_node.py
web_editor/: index.html  package-lock.json  package.json  start_servers.sh
web_editor/backend/db/: app.py
web_editor/backend/db/db_connection/: db_connection.py
web_editor/backend/db/devices/: devices_model.py
web_editor/scripts_python/: insert_devices.py  script_devices.py  status.json
web_editor/src/: App.jsx  index.css  main.jsx
web_editor/src/components/: DevicesList.jsx  SideNavBar.jsx  TileMapEdit.jsx
web_editor/src/css/: Contact.css  Home.css  devices.css  index.css
web_editor/src/pages/: Contact.jsx  Devices.jsx  Home.jsx  MapEditor.jsx  TileMap.jsx
web_editor/src/router/: router.jsx
